fix: overflow on .coz-modal

--- a/stylus/ui-components/modals.styl
+++ b/stylus/ui-components/modals.styl
@@ -49,6 +49,11 @@ $modals
         padding           1.5em 0
         background-color  white
         color             grey-08
+
+        // The content of the modal should manage its
+        // overflow settings as overflowing here may
+        // hide the border-radius
+        overflow          hidden
         .coz-modal-content
             padding 0 1.5em
 
